# agent-scrivener

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.kiro/hooks/: README.md  deployment-validation.yml  doc-sync.yml  performance-check.yml  test-on-save.yml
.kiro/settings/: mcp.json
agent_scrivener/: __init__.py
agent_scrivener/agents/: __init__.py  analysis_agent.py  api_agent.py  base.py  citation_agent.py  drafting_agent.py  planner_agent.py  research_agent.py
agent_scrivener/api/: README.md  __init__.py  auth.py  main.py  models.py  orchestrator_adapter.py  routes.py  websocket.py
agent_scrivener/deployment/: .env.example  Dockerfile  README.md  __init__.py  agentcore-config.yml  deploy.sh  docker-compose.yml  environment.py  health_check.py  secrets.py  validate.py
agent_scrivener/memory/: __init__.py  memory_store.py  session_manager.py  session_persistence.py
agent_scrivener/models/: __init__.py  analysis.py  core.py  errors.py
agent_scrivener/orchestration/: README.md  __init__.py  orchestrator.py  registry.py
agent_scrivener/tools/: __init__.py  browser_wrapper.py  code_interpreter_wrapper.py  gateway_wrapper.py
agent_scrivener/utils/: __init__.py  config.py  error_handler.py  logging.py  monitoring.py  validation.py
demo/: hackathon_demo.py  sample_outputs.py  sample_queries.py
docs/: api_reference.md  kiro_integration_showcase.md  technical_blog_post.md  user_guide.md  validation_development.md  validation_guide.md
examples/: api_demo.py  error_handling_monitoring_demo.py
mcp_servers/: README.md  citation_formatter_server.py  requirements.txt  test_servers.py  web_research_server.py
scripts/: __init__.py  run_performance_tests.py  setup_dev.py
test_memory/: 464f5ee8-bbfd-4c53-8a13-ff55450e5bab.json
tests/: __init__.py  conftest.py  run_performance_tests.py
tests/data/: test_datasets.py
tests/integration/: test_agent_orchestration.py  test_api_endpoints.py  test_end_to_end_pipeline.py  test_framework.py  test_load_testing.py  test_mcp_integration.py  test_orchestration_enhanced.py  test_orchestration_simple.py  test_performance_benchmarks.py  test_websocket.py
tests/performance/: __init__.py  config.py  report_generator.py  test_concurrent_requests.py  test_memory_usage.py  test_scalability.py  test_system_limits.py
tests/unit/: __init__.py  test_analysis_agent.py  test_api_agent.py  test_api_auth.py  test_api_models.py  test_base_agent.py  test_browser_wrapper.py  test_citation_agent.py  test_code_interpreter_wrapper.py  test_drafting_agent.py  test_error_handler.py  test_gateway_wrapper.py  test_memory_store.py  test_models.py  test_monitoring.py  test_planner_agent.py  test_research_agent.py  test_session_manager.py  test_session_persistence.py
tests/validation/: __init__.py  conftest.py  test_api_endpoint_validator.py  test_aws_infrastructure_validator.py  test_base_validator.py  test_data_persistence_validator.py  test_deployment_config_validator.py  test_documentation_validator.py  test_end_to_end_validator.py  test_models.py  test_monitoring_validator.py  test_orchestration_validator.py  test_orchestrator.py  (+3 more)
(+33 files in other folders)
